# RPIMoCap

./: README.md
RPIMoCap/: CMakeLists.txt  RPIMoCap.pro
RPIMoCap/RPIMoCapBase/: CMakeLists.txt  RPIMoCapBase.pro  frame.cpp  frame.h  line3d.cpp  line3d.h  mqttpublisher.cpp  mqttpublisher.h  mqttsettings.cpp  mqttsettings.h  mqttsubscriber.cpp  mqttsubscriber.h  rpimocapbase_global.h  vector3f.h
RPIMoCap/RPIMoCapBase/include/RPIMoCap/Core/: avahibrowser.h  cameraparams.h  frame.h  line3d.h  mqttpublisher.h  mqttsettings.h  msgpack_defs.h  topics.h
RPIMoCap/RPIMoCapBase/include/RPIMoCapBase/: frame.h  mqttsubscriber.h  msgpack_defs.h
RPIMoCap/RPIMoCapBase/src/: frame.cpp  line3d.cpp  mqttpublisher.cpp  mqttsettings.cpp  mqttsubscriber.cpp
RPIMoCap/RPIMoCapBase/src/Core/: avahibrowser.cpp  frame.cpp  line3d.cpp  mqttpublisher.cpp  mqttsettings.cpp  mqttsubscriber.cpp  topics.cpp
RPIMoCap/RPIMoCapClient/: CMakeLists.txt  RPIMoCapClient.pro  avahibrowser.cpp  avahibrowser.h  main.cpp  markerdetector.cpp  markerdetector.h  rpicamera.cpp  rpicamera.h  rpimocapclient.cpp  rpimocapclient.h
RPIMoCap/RPIMoCapClient/include/RPIMoCap/ClientLib/: client.h  icamera.h  markerdetector.h  rpicamera.h  rpimocapclient.h
RPIMoCap/RPIMoCapClient/include/RPIMoCap/SimClient/: mainwindow.h  simcamera.h  simcamerawidget.h  simmarker.h  simscene.h  virtualwand.h
RPIMoCap/RPIMoCapClient/src/Client/: main.cpp
RPIMoCap/RPIMoCapClient/src/ClientLib/: client.cpp  markerdetector.cpp  rpicamera.cpp  rpimocapclient.cpp
RPIMoCap/RPIMoCapClient/src/SimClient/: main.cpp  mainwindow.cpp  mainwindow.ui  simcamera.cpp  simcamerawidget.cpp  simcamerawidget.ui  simscene.cpp  virtualwand.cpp
RPIMoCap/RPIMoCapClient/test/: CMakeLists.txt  simscene.cpp
RPIMoCap/RPIMoCapServer/: CMakeLists.txt  RPIMoCapServer.pro  camerasettings.h  camerasettingswidget.cpp  linesaggregator.cpp  linesaggregator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.h  mocapscene3d.cpp  mocapscene3d.h  mocapscene3d.ui  munkres.cpp  pointchecker.cpp  pointchecker.h  rpimocapserver.cpp  rpimocapserver.h  wandcalibration.cpp  wandcalibration.h
RPIMoCap/RPIMoCapServer/include/RPIMoCap/Server/: calibrationwidget.h  camerasettings.h  camerasettingswidget.h  linesaggregator.h  mainwindow.h  mocapscene3d.h  munkres.h  pointchecker.h  rpimocapserver.h  wandcalibration.h
RPIMoCap/RPIMoCapServer/src/Server/: calibrationwidget.cpp  calibrationwidget.h  calibrationwidget.ui  camerasettings.cpp  camerasettings.h  camerasettingswidget.cpp  camerasettingswidget.ui  floorcalibrationwidget.cpp  floorcalibrationwidget.h  floorcalibrationwidget.ui  linesaggregator.cpp  linesaggregator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mocapscene3d.cpp  munkres.cpp  pointchecker.cpp  rpimocapserver.cpp  rpimocapserver.h  wandcalibration.cpp  wandcalibration.h  wanddetector.cpp  wanddetector.h
RPIMoCap/RPIMoCapServer/src/Server/Calibration/: floorcalibration.cpp  floorcalibration.h  wandcalibration.cpp
RPIMoCap/RPIMoCapServer/test/: CMakeLists.txt  floorcalibrationtest.cpp  reconstruction.cpp  wandcalibration.cpp  wanddetector.cpp
RPIMoCap/RPIMoCapVisualizations/: CMakeLists.txt
RPIMoCap/RPIMoCapVisualizations/include/RPIMoCap/: extrinsicwidget.h  mocapscene3d.h  primitives.h
RPIMoCap/RPIMoCapVisualizations/src/: extrinsicwidget.cpp  extrinsicwidget.ui  mocapscene3d.cpp  primitives.cpp
scripts/: crosscompile_client.sh  install_deps.sh  prepare_image.sh  rpi_toolchain.cmake  rpiclient.service
